fix: ide의 코드 검토 파트 수정